--- a/test/fixtures/storage_units.yml
+++ b/test/fixtures/storage_units.yml
@@ -1,31 +1,19 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  name: unit 1
-  description: Storage unit 1
-  length: 10
-  width: 10
-  height: 10
-  renter_id: <%= Renter.all.first.id %>
-  annual_rate: 120
-  monthly_rate: 10
-
-two:
-  name: unit 2
-  description: Storage unit 2
-  length: 20
-  width: 20
-  height: 20
-  renter_id: <%= Renter.all.last.id %>
-  annual_rate: 240
-  monthly_rate: 20
-  
-three:
-  name: unit 3
-  description: Storage unit 3
-  length: 30
-  width: 30
-  height: 40
-  renter_id: nil
-  annual_rate: 360
-  monthly_rate: 30
+<% i = 0 %>
+<% 10.times do %>
+<% i += 1 %>
+su_<%= i %>:
+  name: unit <%= i %>
+  description: Storage unit <%= i %>
+  length: <%= i * 10 %>
+  width: <%= i * 10 %>
+  height: <%= i * 10 %>
+  annual_rate: <%= i * 10.00 * 12 %>
+  monthly_rate: <%= i * 10.00 %>
+<% if i.divmod(2)[1] == 0 %>  
+  building_id: <%= Building.all.first.id %>
+<% else %>
+  building_id: <%= Building.all.last.id %>
+<% end %>  
+<% end %>
